--- a/index.html
+++ b/index.html
@@ -18,18 +18,37 @@
 </head>
 <body>
   
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+  <main>
+    <section>
+      <div>
+        <div class="card sedans">
+          <img class="card__img-icon" src="images/icon-sedans.svg" alt="Sedans">
+          <h2 class="card__title">Sedans</h2>
+          <p class="card__description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+          <a class="card__more" href="#">Learn More</a>
+        </div>
+        <div class="card suvs">
+          <img class="card__img-icon" src="images/icon-suvs.svg" alt="Suvs">
+          <h2 class="card__title">SUVs</h2>
+          <p class="card__description">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+          <a class="card__more" href="#">Learn More</a>
+        </div>
+        <div class="card luxury">
+          <img class="card__img-icon" src="images/icon-luxury.svg" alt="Luxury">
+          <h2 class="card__title">Luxury</h2>
+          <p class="card__description">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+          <a class="card__more" href="#">Learn More</a>
+        </div>
+      </div>
+    </section>
+  </main>  
+  
   
 
+  
+  
+
+  
+  
 </body>
 </html>
